--- a/app/globals.css
+++ b/app/globals.css
@@ -3,11 +3,6 @@
 @theme {
   --font-outfit: var(--font-outfit);
   --font-ovo: var(--font-ovo);
-
-  --color-light-hover: #fcf4ff;
-  --color-dark-hover: #2a004a;
-  --color-dark-theme: #11001f;
-
-  --shadow-black: 4px 4px 0 #000;
-  --shadow-white: 4px 4px 0 #fff;
 }
+
+@custom-variant dark (&:where(.dark, .dark *));
